--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Singablues
 email: maximehrbt@gmail.com
 description: "Blog d'un étudiant français à Singapour : Anecdotes, voyages et rencontres en Asie du Sud Est"
 baseurl: ""
-url: "http://localhost:4000/"
+url: "http://herbautmax.github.io/"
 twitter_username: MaximeHerbaut
 github_username:  herbautmax
 
