--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ title: Singablues
 email: maximehrbt@gmail.com
 description: "Blog d'un étudiant français à Singapour : Anecdotes, voyages et rencontres en Asie du Sud Est"
 baseurl: ""
-url: "http://herbautmax.github.io/"
+#url: "http://localhost:4000/"
+url: "herbautmax.github.io/"
 twitter_username: MaximeHerbaut
 github_username:  herbautmax
 
@@ -11,7 +12,8 @@ github_username:  herbautmax
 markdown: kramdown
 permalink: pretty
 
-paginate: 2                   # le nombre d'articles à afficher par page
+paginate: 6                   # le nombre d'articles à afficher par page
 paginate_path: /page:num      # l'url générée pour la pagination
 
 
+    
