--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 # Site settings
-title: Maxime Herbaut, Ingénieur Développeur wweb full stack
-email: maximehrbt@gmail.com
-description: "Blog d'un étudiant français à Singapour : Anecdotes, voyages et rencontres en Asie du Sud Est"
+title: Maxime Herbaut, Ingénieur Développeur web full stack
+email: maxime-herbaut@orange.fr
+description: "Développement de sites web : site vitrine, site e-commerce, blog,
+              application interne par un ingénieur web full stack en auto entreprise"
 baseurl: ""
-url: "http://localhost:4000/"
+url: "http://localhost:4000"
 #url: "herbautmax.github.io/"
 twitter_username: MaximeHerbaut
 github_username:  herbautmax
