--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Développement de sites web : site vitrine, site e-commerce, blog,
               application interne par un ingénieur web full stack en auto entreprise"
 baseurl: ""
 url: "http://localhost:4000"
-#url: "herbautmax.github.io/"
+#url: "herbautmax.github.io"
 twitter_username: MaximeHerbaut
 github_username:  herbautmax
 
