--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: maxime-herbaut@orange.fr
 description: "Développement de sites web : site vitrine, site e-commerce, blog,
               application interne par un ingénieur web full stack en auto entreprise"
 baseurl: ""
-url: "herbautmax.github.io"
+url: "maximeherbaut.com"
 twitter_username: MaximeHerbaut
 github_username:  herbautmax
 
