--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Maxime Herbaut, Ingénieur Développeur web full stack
+title: Maxime Herbaut, Ingénieur Développeur site web full stack
 email: maxime-herbaut@orange.fr
 description: "Développement de sites web : site vitrine, site e-commerce, blog,
               application interne par un ingénieur web full stack en auto entreprise"
