--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 # Site settings
 title: Maxime Herbaut • Ingénieur Développeur site web full stack
 email: maxime-herbaut@orange.fr
-description: "Développement de sites web : site vitrine, site e-commerce, blog,
-              application interne par un ingénieur web full stack en auto entreprise"
+description: "Développement personnalisé de vos sites web : site vitrine, site e-commerce, blog,
+              application interne par un ingénieur web full stack en auto entreprise. Prise en charge du référencement SEO,  
+              ergonomie UX, design et data analyse."
 baseurl: ""
 url: "http://www.maximeherbaut.com/"
 twitter_username:  MaximeHerbaut
